# glmm-mcem

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/check/: SKILL.md
demo/: simulation_study.py
docs/: theory.tex
notebooks/: tutorial.ipynb
src/glmm_mcem/: __init__.py  data.py  estimator.py  laplace.py  likelihoods.py  mcem.py  sampler.py
tests/: test_data.py  test_laplace.py  test_likelihoods.py  test_mcem.py  test_sampler.py
