[project]
name = "glmm-mcem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GVA", email = "georgios.vassos1@maersk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
